--- a/app/views/library_artists/_library_artist.html.erb
+++ b/app/views/library_artists/_library_artist.html.erb
@@ -1,1 +1,1 @@
-<p><%= link_to library_artist.name, new_artist_path(library_artist: library_artist.name) %></p>
+<p><%= link_to library_artist.name, library_artist_path(name: library_artist.name) %></p>
