--- a/app/views/library_artists/_library_album.html.erb
+++ b/app/views/library_artists/_library_album.html.erb
@@ -9,7 +9,7 @@
   </tr>
   <tr>
     <td>Date</td>
-    <td><%= library_album.date %> (<%= library_album.original_date %>)</td>
+    <td><%= format_date(library_album) %></td>
   </tr>
   <tr>
     <td>Type</td>
