--- a/app/views/what/_torrent_group.html.erb
+++ b/app/views/what/_torrent_group.html.erb
@@ -29,6 +29,6 @@
   </tr>
   <tr>
     <td>Associate with album</td>
-    <td><%= f.radio_button :torrent_group_id, torrent_group.groupId %></td>
+    <td><%= f.radio_button :what_id, torrent_group.groupId %></td>
   </tr>
 </table>
