--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% if flash[:error] -%>
+  <p class='error'>Error: <%=h flash[:error] %></p>
+<% end -%>
+<% if flash[:notice] -%>
+  <p class='notice'>Notice: <%=h flash[:notice] %></p>
+<% end -%>
+
 <%= yield %>
 
 </body>
