--- a/app/views/library_albums/show.html.erb
+++ b/app/views/library_albums/show.html.erb
@@ -47,8 +47,6 @@
 <%= render partial: 'group' if @group.id %>
 <hr>
 <%= form_for :what_request, method: :get, url: @library_album do |f| %>
-  <%= f.hidden_field 'filter_cat[1]', value: 1 %>
-  <%= f.hidden_field :action, value: :browse %>
   <p>
   <%= f.label :groupname %>
   <%= f.search_field :groupname, value: @what_request.try(:groupname) || @library_album.album %>
@@ -64,7 +62,7 @@
   <h2>what.cd Results</h2>
   <%= form_for @group do |f| %>
     <%= f.submit 'Associate selection with album' %>
-    <%= f.hidden_field :what_results, value: @what_response.marshal_dump[:results].to_json %>
+    <%= f.hidden_field :what_results, value: @what_response.results.to_json %>
     <%= f.hidden_field :library_album_id, value: @library_album.id %>
     <br><br>
     <%= render partial: 'what/torrent_group', locals: { f: f }, collection: @what_response.groups, as: :torrent_group, spacer_template: 'shared/rule' %>
