--- a/app/views/library_albums/_group.html.erb
+++ b/app/views/library_albums/_group.html.erb
@@ -27,3 +27,12 @@
     </td>
   </tr>
 </table>
+<h3>what.cd Artists</h3>
+<table>
+  <% @group.artists.each do |type, artists| %>
+    <tr>
+      <td><%= type %></td>
+      <td><%= render partial: 'artist', collection: artists, spacer_template: 'shared/break' %></td>
+    </tr>
+  <% end %>
+</table>
