--- a/app/views/library_albums/_library_item.html.erb
+++ b/app/views/library_albums/_library_item.html.erb
@@ -2,5 +2,10 @@
   <td><%= library_item.track %></td>
   <td><%= library_item.title %></td>
   <td><%= library_item.artist %></td>
-  <td><%#= render partial: 'artist', collection: library_item.artists %></td>
+  <td>
+    <% library_item.artists.each do |type, artists| %>
+      <%= type %>:
+      <%= render partial: 'artist', collection: artists %>
+    <% end %>
+  </td>
 </tr>
