--- a/app/views/library_albums/_group.html.erb
+++ b/app/views/library_albums/_group.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <tr>
     <td>Artist</td>
-    <td><%= @group.what_artist %></td>
+    <td><%= @group.what_artist_name %></td>
   </tr>
   <tr>
     <td>Year</td>
