--- a/app/views/library_albums/show.html.erb
+++ b/app/views/library_albums/show.html.erb
@@ -70,7 +70,7 @@
     <%= f.hidden_field :results, value: @what_response.results.to_json %>
     <%= f.hidden_field :library_album_id, value: @library_album.id %>
     <br><br>
-    <%= render partial: 'what/torrent_group', locals: { f: f }, collection: @what_response.groups, as: :torrent_group, spacer_template: 'shared/rule' %>
+    <%= render partial: 'what/torrent_group', locals: { f: f, what_request: @what_request }, collection: @sorted_groups, as: :torrent_group, spacer_template: 'shared/rule' %>
   <% end %>
   <br>
   <span>Pages:
