--- a/app/views/what/_torrent_group.html.erb
+++ b/app/views/what/_torrent_group.html.erb
@@ -29,7 +29,7 @@
   </tr>
   <tr>
     <td>Overall similarity</td>
-    <td><%= torrent_group.similarity(artist: what_request.artistname, name: what_request.groupname).round(2) %></td>
+    <td><%= '%.2f' % torrent_group.similarity(artist: library_album.albumartist, name: library_album.album) %></td>
   </tr>
   <tr>
     <td>Associate with album</td>
