--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <%= link_to 'Library Artists', library_artists_path %>
   <%= link_to 'Library Albums', library_albums_path %>
+  <%= link_to 'Groups', groups_path %>
   <% if flash[:error] -%>
     <p class='error'>Error: <%=h flash[:error] %></p>
   <% end -%>
