--- a/app/views/library_albums/show.html.erb
+++ b/app/views/library_albums/show.html.erb
@@ -1,45 +1,5 @@
 <h1>Library Album</h1>
-<table>
-  <tr>
-    <td>Album</td>
-    <td><%= @library_album.album %></td>
-  </tr>
-  <tr>
-    <td>Artist</td>
-    <td><%= link_to @library_album.albumartist, library_artist_path(name: @library_album.albumartist) %></td>
-  </tr>
-  <tr>
-    <td>Sort artist</td>
-    <td><%= @library_album.albumartist_sort %></td>
-  </tr>
-  <tr>
-    <td>Track count</td>
-    <td><%= @library_album.tracktotal %></td>
-  </tr>
-  <tr>
-    <td>Date</td>
-    <td><%= format_date @library_album %></td>
-  </tr>
-  <tr>
-    <td>Type</td>
-    <td><%= @library_album.albumtype %></td>
-  </tr>
-  <tr>
-    <td>Label</td>
-    <td><%= @library_album.label %></td>
-  </tr>
-  <tr>
-    <td>Media</td>
-    <td><%= @library_album.media %></td>
-  </tr>
-  <tr>
-    <td>MusicBrainz</td>
-    <td>
-      <a href='http://musicbrainz.org/release-group/<%= @library_album.mb_releasegroupid %>' target='_blank'>Release group</a>
-      <a href='http://musicbrainz.org/release/<%= @library_album.mb_albumid %>' target='_blank'>Release</a>
-    </td>
-  </tr>
-</table>
+<%= render partial: 'shared/library_album' %>
 <h2>Items</h2>
 <table>
   <th>Track</th>
@@ -49,8 +9,14 @@
   <th>Group what.cd artist associations</th>
   <%= render partial: 'library_item', collection: @library_items %>
 </table>
-<%= render partial: 'group' if @group.id %>
+
+<% if @group.id %>
+  <h1><%= link_to 'Associated Group', @group %></h1>
+  <%= render partial: 'shared/group' %>
+<% end %>
+
 <hr>
+
 <%= form_for :what_request, method: :get, url: @library_album do |f| %>
   <p>
   <%= f.label :groupname %>
