--- a/app/views/shared/_group.html.erb
+++ b/app/views/shared/_group.html.erb
@@ -22,7 +22,7 @@
     </td>
   </tr>
 </table>
-<h2>what.cd artists</h2>
+<h3>Artists</h3>
 <table>
   <% @group.artists_by(:type).each do |type, artists| %>
     <tr>
