add show artist and similar artists

--- a/app/views/shared/_artist.html.erb
+++ b/app/views/shared/_artist.html.erb
@@ -1,1 +1,1 @@
-<a href='https://what.cd/artist.php?id=<%= artist.what_id %>' target='_blank'><%= artist.what_name %></a>
+<%= link_to artist.what_name, artist %>
