--- a/app/views/what/_torrent_group.html.erb
+++ b/app/views/what/_torrent_group.html.erb
@@ -33,6 +33,6 @@
   </tr>
   <tr>
     <td>Associate with album</td>
-    <td><%= f.radio_button :what_id, torrent_group.id %></td>
+    <td><%= f.radio_button :whatcd_id, torrent_group.id %></td>
   </tr>
 </table>
