--- a/app/views/artists/_group.html.erb
+++ b/app/views/artists/_group.html.erb
@@ -1,4 +1,4 @@
 <tr>
-  <td><%= link_to group.what_name, group %></td>
+  <td><%= link_to group.whatcd_name, group %></td>
   <td><%= link_to group.library_album_name, group.library_album %></td>
 </tr>
