--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,11 +2,11 @@
 <table>
   <tr>
     <td>whatcd name</td>
-    <td><%= @artist.what_name %></td>
+    <td><%= @artist.whatcd_name %></td>
   </tr>
   <tr>
     <td>whatcd links</td>
-    <td><a href='https://what.cd/artist.php?id=<%= @artist.what_id %>' target='_blank'>artist page</a></td>
+    <td><a href='https://what.cd/artist.php?id=<%= @artist.whatcd_id %>' target='_blank'>artist page</a></td>
   </tr>
 </table>
 <% if !@similar_artists.empty? %>
