--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,1 +1,1 @@
-<p><%= link_to group.what_name, group %> (<%= '%.2f' % group.what_confidence %>)</p>
+<p><%= link_to group.whatcd_name, group %> (<%= '%.2f' % group.whatcd_confidence %>)</p>
