--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
 </head>
 <body>
   <%= link_to 'Library Artists', library_artists_path %>
-  <%= link_to 'Library Albums', library_albums_path(query_options: { 'matched_status' => 'unmatched' }) %>
-  <%= link_to 'Groups', groups_path %>
+  <%= link_to 'Library Albums', library_albums_path %>
   <% if flash[:error] -%>
     <p class='error'>Error: <%=h flash[:error] %></p>
   <% end -%>
