--- a/app/views/library_albums/show.html.erb
+++ b/app/views/library_albums/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Library Album</h1>
-<h2 class='inline'>Information </h2><%= link_to 'edit', edit_group_path(@group) if @group.id %>
+<h2 class='inline'>Metadata </h2><%= link_to 'edit', edit_group_path(@group) if @group.id %>
 <h3>MusicBrainz</h3>
 <table>
   <tr>
