--- a/app/views/library_albums/_library_album.html.erb
+++ b/app/views/library_albums/_library_album.html.erb
@@ -1,4 +1,1 @@
-<tr>
-  <td><%= link_to library_album.album, library_album %></td>
-  <td><%= try_format_float library_album.whatcd_confidence %></td>
-</tr>
+<%= link_to library_album.album, library_album %><br>
