--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= link_to 'Library Artists', library_artists_path %>
   <%= link_to 'Library Albums', library_albums_path %>
   <%= link_to 'Groups', groups_path %>
+  <%= link_to 'Artist Library Item Relationships', artist_library_item_relationships_path %>
   <% if flash[:error] -%>
     <p class='error'>Error: <%=h flash[:error] %></p>
   <% end -%>
