--- a/app/views/dabster/library_artists/show.html.erb
+++ b/app/views/dabster/library_artists/show.html.erb
@@ -14,4 +14,4 @@
   </tr>
 </table>
 <h2>Albums associated with library artist</h2>
-<%= render partial: 'library_album', collection: @library_artist_albums, spacer_template: 'shared/rule' %>
+<%= render partial: 'library_album', collection: @library_artist_albums, spacer_template: 'dabster/shared/rule' %>
