--- a/app/views/dabster/what/_torrent_group.html.erb
+++ b/app/views/dabster/what/_torrent_group.html.erb
@@ -24,7 +24,8 @@
   <tr>
     <td>Artists</td>
     <td>
-      <%= render partial: 'what/torrent_artist', collection: torrent_group.torrent_artists, as: :artist, spacer_template: 'shared/break' %>
+      <%= render partial: 'dabster/what/torrent_artist', collection: torrent_group.torrent_artists,
+        as: :artist, spacer_template: 'dabster/shared/break' %>
     </td>
   </tr>
   <tr>
