--- a/app/views/dabster/playback/_playlist_item.html.erb
+++ b/app/views/dabster/playback/_playlist_item.html.erb
@@ -1,1 +1,6 @@
-<li><%= playlist_item.title %> - <%= playlist_item.artist %></li>
+<% if playlist_item.position == @current_position %>
+  <li class='current-position'>
+<% else %>
+  <li>
+<% end %>
+<%= playlist_item.title %> - <%= playlist_item.artist %></li>
