--- a/app/views/layouts/dabster/application.html.erb
+++ b/app/views/layouts/dabster/application.html.erb
@@ -4,6 +4,7 @@
   <title>Dabster</title>
   <%= stylesheet_link_tag    'dabster/application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'dabster/application', 'data-turbolinks-track' => true %>
+  <%= yield(:head) %>
   <%= csrf_meta_tags %>
 </head>
 <body>
