--- a/app/views/layouts/dabster/application.html.erb
+++ b/app/views/layouts/dabster/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= link_to 'Library Artists', library_artists_path %>
+  <%= link_to 'Playback', playback_path %>
   <%= link_to 'Library Albums', library_albums_path %>
   <%= link_to 'Groups', groups_path %>
   <%= link_to 'Artist Library Item Relationships', artist_library_item_relationships_path %>
